@@ -31,11 +31,13 @@ from DateTime.DateTime import DateTime
 from OFS.Image import cookId, File, Image
 
 from Products.CMFCore.Expression import Expression
+from Products.CMFCore.utils import getToolByName
 
 from Products.CPSSchemas.Field import CPSField, FieldRegistry
 from Products.CPSSchemas.Field import ValidationError
 from Products.CPSSchemas.FileUtils import convertFileToHtml
 from Products.CPSSchemas.FileUtils import convertFileToText
+from Products.CPSSchemas.DiskFile import DiskFile
 
 
 def _isinstance(ob, cls):
@@ -476,6 +478,99 @@ class CPSFileField(CPSField):
 
 InitializeClass(CPSFileField)
 
+class CPSDiskFileField(CPSFileField):
+    """File field."""
+    meta_type = "CPS Disk File Field"
+
+    _properties = CPSFileField._properties + (
+        {'id': 'disk_storage_path', 'type': 'string', 'mode': 'w',
+         'label': 'Storage path'},
+        )
+    disk_storage_path = ''
+
+    def getStoragePath(self):
+        if self.disk_storage_path:
+            return self.disk_storage_path
+        else:
+            portal_schemas = getToolByName(self, 'portal_schemas')
+            storage_path = getattr(portal_schemas, 'disk_storage_path', '')
+            if storage_path:
+                return storage_path
+            return 'var/files'
+
+    def computeDependantFields(self, schemas, data, context=None):
+        """Compute dependant fields.
+
+        schemas is the list of schemas
+
+        data is the dictionnary of the datamodel
+        """
+        field_id = self.getFieldId()
+        file = data[field_id] # May be None.
+        if _isinstance(file, File):
+            file = DiskFile(file.getId(), file.title, file.data,
+                            file.content_type, self.getStoragePath())
+        data[field_id] = file
+        text_field_id = self._getDependantFieldId(schemas, self.suffix_text)
+        if text_field_id is not None:
+            data[text_field_id] = convertFileToText(file, context=context)
+
+        html_field_id = self._getDependantFieldId(schemas, self.suffix_html)
+        html_subfiles_field_id = self._getDependantFieldId(schemas,
+                                                           self.suffix_html_subfiles)
+        if html_field_id is not None:
+            html_conversion = convertFileToHtml(file, context=context)
+            if html_conversion is not None:
+                html_string = html_conversion.getData()
+                fileid = cookId('', '', file)[0]
+                if '.' in fileid:
+                    fileid = fileid[:fileid.rfind('.')]
+                if not fileid:
+                    fileid = 'document'
+                fileid = fileid + '.html'
+                html_file = DiskFile(fileid, '', html_string,
+                                 content_type='text/html')
+
+                # getSubObjects returns a dict of sub-objects, each sub-object
+                # being a file but described as a string.
+                subobjects_dict = html_conversion.getSubObjects()
+                files_dict = {}
+                LOG('BasicFields', DEBUG, "subobjects = %s" % `subobjects_dict`)
+                for k, v in subobjects_dict.items():
+                    files_dict[k] = File(k, k, v)
+                LOG('BasicFields', DEBUG, "files_dict = %s" % `files_dict`)
+            else:
+                html_file = None
+                files_dict = {}
+            data[html_field_id] = html_file
+            data[html_subfiles_field_id] = files_dict
+
+    def validate(self, value):
+        if not value:
+            return None
+        if _isinstance(value, File):
+            return value
+        raise ValidationError('Not a file: %s' % repr(value))
+
+    def convertToLDAP(self, value):
+        """Convert a value to LDAP attribute values."""
+        raise TypeError("DiskFile does not yet support LDAP directories")
+#         if not value:
+#             return []
+#         return [str(value)]
+
+    def convertFromLDAP(self, values):
+        """Convert a value from LDAP attribute values."""
+        raise TypeError("DiskFile does not yet support LDAP directories")
+#         if not values:
+#             return None
+#         if len(values) != 1:
+#             raise ValidationError("Incorrect File value from LDAP: "
+#                                   "(%d-element list)" % len(values))
+#         return File(self.getFieldId(), '', values[0])
+
+InitializeClass(CPSDiskFileField)
+
 
 class CPSSubObjectsField(CPSField):
     """Sub-objects field."""
@@ -590,6 +685,7 @@ FieldRegistry.register(CPSLongField)
 FieldRegistry.register(CPSFloatField)
 FieldRegistry.register(CPSDateTimeField)
 FieldRegistry.register(CPSFileField)
+FieldRegistry.register(CPSDiskFileField)
 FieldRegistry.register(CPSSubObjectsField)
 FieldRegistry.register(CPSImageField)
 FieldRegistry.register(CPSRangeListField)
